--- a/frontend/src/app/components/product-list/product-list.component.html
+++ b/frontend/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,50 @@
-<p *ngFor="let product of products">
-  {{ product.name }}: {{ product.unitPrice | currency: 'USD' }}
-</p>
+<div class="main-content">
+  <div class="section-content section-content-p30">
+    <h4>Category: {{ currentCategoryName }}</h4>
+    <hr>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3" *ngFor="let product of products">
+          <div class="product-box">
+            <a routerLink="/products/{{ product.id }}">
+              <img src="{{ product.imageUrl }}" class="img-responsive" alt="{{ product.name }}">
+            </a>
+            <a href="#">
+              <h1><a routerLink="/products/{{ product.id }}">{{ product.name }}</a></h1>
+            </a>
+            <h2>{{ product.description }}</h2>
+            <div class="price">{{ product.unitPrice | currency: 'USD' }}</div>
+            <a href="#" class="primary-btn">Add to cart</a>
+          </div>
+        </div>
+        <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+          <h3>No products found.</h3>
+        </div>
+      </div>
+      <div class="footer-pagination">
+        <div class="row">
+          <div class="col-md-6"></div>
+          <div class="col-md-3">
+            <div class="items">
+              <label>Item per page</label> <select>
+              <option>10</option>
+              <option>20</option>
+              <option>30</option>
+              <option>40</option>
+            </select>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="number">1 - 10 of 100</div>
+          </div>
+          <div class="col-md-1">
+            <div class="arrows">
+              <a href="#"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+              <a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
