--- a/frontend/src/app/components/product-details/product-details.component.html
+++ b/frontend/src/app/components/product-details/product-details.component.html
@@ -3,7 +3,7 @@
     <img src="{{ product.imageUrl }}" class="detail-img">
     <h3>{{ product.name }}</h3>
     <div class="price">{{ product.unitPrice | currency: 'USD' }}</div>
-    <a href="#" class="primary-btn">Add to car</a>
+    <button (click)="addToCart()" class="btn btn-primary">Add to car</button>
 
     <hr>
 
