--- a/frontend/src/app/components/product-list/product-list.component.html
+++ b/frontend/src/app/components/product-list/product-list.component.html
@@ -14,7 +14,7 @@
             </a>
             <h2>{{ product.description }}</h2>
             <div class="price">{{ product.unitPrice | currency: 'USD' }}</div>
-            <a href="#" class="primary-btn">Add to cart</a>
+            <a (click)="addToCart(product)" class="btn btn-primary">Add to cart</a>
           </div>
         </div>
         <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
